y.output

state 0
	$accept: .any_command $end 

	SELECT  shift 15
	INSERT  shift 16
	UPDATE  shift 17
	DELETE  shift 19
	REPLACE  shift 18
	SET  shift 20
	CREATE  shift 21
	ALTER  shift 22
	DROP  shift 24
	RENAME  shift 23
	ANALYZE  shift 25
	SHOW  shift 26
	DESCRIBE  shift 27
	EXPLAIN  shift 28
	.  error

	any_command  goto 1
	command  goto 2
	select_statement  goto 3
	insert_statement  goto 4
	update_statement  goto 5
	replace_statement  goto 6
	delete_statement  goto 7
	set_statement  goto 8
	create_statement  goto 9
	alter_statement  goto 10
	rename_statement  goto 11
	drop_statement  goto 12
	analyze_statement  goto 13
	other_statement  goto 14

state 1
	$accept:  any_command.$end 

	$end  accept
	.  error


state 2
	any_command:  command.    (1)

	.  reduce 1 (src line 149)


state 3
	command:  select_statement.    (2)
	select_statement:  select_statement.union_op select_statement 

	UNION  shift 30
	MINUS  shift 31
	EXCEPT  shift 32
	INTERSECT  shift 33
	.  reduce 2 (src line 155)

	union_op  goto 29

state 4
	command:  insert_statement.    (3)

	.  reduce 3 (src line 160)


state 5
	command:  update_statement.    (4)

	.  reduce 4 (src line 161)


state 6
	command:  replace_statement.    (5)

	.  reduce 5 (src line 162)


state 7
	command:  delete_statement.    (6)

	.  reduce 6 (src line 163)


state 8
	command:  set_statement.    (7)

	.  reduce 7 (src line 164)


state 9
	command:  create_statement.    (8)

	.  reduce 8 (src line 165)


state 10
	command:  alter_statement.    (9)

	.  reduce 9 (src line 166)


state 11
	command:  rename_statement.    (10)

	.  reduce 10 (src line 167)


state 12
	command:  drop_statement.    (11)

	.  reduce 11 (src line 168)


state 13
	command:  analyze_statement.    (12)

	.  reduce 12 (src line 169)


state 14
	command:  other_statement.    (13)

	.  reduce 13 (src line 170)


state 15
	select_statement:  SELECT.comment_opt distinct_opt select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	$$36: .    (36)

	.  reduce 36 (src line 293)

	comment_opt  goto 34
	$$36  goto 35

state 16
	insert_statement:  INSERT.comment_opt INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT.comment_opt INTO dml_table_expression SET update_list on_dup_opt 
	$$36: .    (36)

	.  reduce 36 (src line 293)

	comment_opt  goto 36
	$$36  goto 35

state 17
	update_statement:  UPDATE.comment_opt dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 
	$$36: .    (36)

	.  reduce 36 (src line 293)

	comment_opt  goto 37
	$$36  goto 35

state 18
	replace_statement:  REPLACE.comment_opt dml_table_expression SET update_list 
	$$36: .    (36)

	.  reduce 36 (src line 293)

	comment_opt  goto 38
	$$36  goto 35

state 19
	delete_statement:  DELETE.comment_opt FROM dml_table_expression where_expression_opt order_by_opt limit_opt 
	$$36: .    (36)

	.  reduce 36 (src line 293)

	comment_opt  goto 39
	$$36  goto 35

state 20
	set_statement:  SET.comment_opt update_list 
	$$36: .    (36)

	.  reduce 36 (src line 293)

	comment_opt  goto 40
	$$36  goto 35

state 21
	create_statement:  CREATE.TABLE not_exists_opt ID force_eof 
	create_statement:  CREATE.constraint_opt INDEX sql_id using_opt ON ID force_eof 
	create_statement:  CREATE.VIEW sql_id force_eof 
	constraint_opt: .    (199)

	TABLE  shift 41
	VIEW  shift 43
	UNIQUE  shift 44
	.  reduce 199 (src line 1023)

	constraint_opt  goto 42

state 22
	alter_statement:  ALTER.ignore_opt TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER.ignore_opt TABLE ID RENAME to_opt ID 
	alter_statement:  ALTER.VIEW sql_id force_eof 
	ignore_opt: .    (190)

	VIEW  shift 46
	IGNORE  shift 47
	.  reduce 190 (src line 1001)

	ignore_opt  goto 45

state 23
	rename_statement:  RENAME.TABLE ID TO ID 

	TABLE  shift 48
	.  error


state 24
	drop_statement:  DROP.TABLE exists_opt ID 
	drop_statement:  DROP.INDEX sql_id ON ID 
	drop_statement:  DROP.VIEW exists_opt sql_id force_eof 

	TABLE  shift 49
	INDEX  shift 50
	VIEW  shift 51
	.  error


state 25
	analyze_statement:  ANALYZE.TABLE ID 

	TABLE  shift 52
	.  error


state 26
	other_statement:  SHOW.force_eof 
	force_eof: .    (204)

	.  reduce 204 (src line 1039)

	force_eof  goto 53

state 27
	other_statement:  DESCRIBE.force_eof 
	force_eof: .    (204)

	.  reduce 204 (src line 1039)

	force_eof  goto 54

state 28
	other_statement:  EXPLAIN.force_eof 
	force_eof: .    (204)

	.  reduce 204 (src line 1039)

	force_eof  goto 55

state 29
	select_statement:  select_statement union_op.select_statement 

	SELECT  shift 15
	.  error

	select_statement  goto 56

state 30
	union_op:  UNION.    (40)
	union_op:  UNION.ALL 

	ALL  shift 57
	.  reduce 40 (src line 312)


state 31
	union_op:  MINUS.    (42)

	.  reduce 42 (src line 321)


state 32
	union_op:  EXCEPT.    (43)

	.  reduce 43 (src line 325)


state 33
	union_op:  INTERSECT.    (44)

	.  reduce 44 (src line 329)


state 34
	select_statement:  SELECT comment_opt.distinct_opt select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	distinct_opt: .    (45)

	DISTINCT  shift 59
	.  reduce 45 (src line 334)

	distinct_opt  goto 58

state 35
	comment_opt:  $$36.comment_list 
	comment_list: .    (38)

	.  reduce 38 (src line 303)

	comment_list  goto 60

state 36
	insert_statement:  INSERT comment_opt.INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt.INTO dml_table_expression SET update_list on_dup_opt 

	INTO  shift 61
	.  error


state 37
	update_statement:  UPDATE comment_opt.dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 63
	.  error

	dml_table_expression  goto 62

state 38
	replace_statement:  REPLACE comment_opt.dml_table_expression SET update_list 

	ID  shift 63
	.  error

	dml_table_expression  goto 64

state 39
	delete_statement:  DELETE comment_opt.FROM dml_table_expression where_expression_opt order_by_opt limit_opt 

	FROM  shift 65
	.  error


state 40
	set_statement:  SET comment_opt.update_list 

	ID  shift 70
	.  error

	column_name  goto 68
	update_list  goto 66
	update_expression  goto 67
	sql_id  goto 69

state 41
	create_statement:  CREATE TABLE.not_exists_opt ID force_eof 
	not_exists_opt: .    (188)

	IF  shift 72
	.  reduce 188 (src line 996)

	not_exists_opt  goto 71

state 42
	create_statement:  CREATE constraint_opt.INDEX sql_id using_opt ON ID force_eof 

	INDEX  shift 73
	.  error


state 43
	create_statement:  CREATE VIEW.sql_id force_eof 

	ID  shift 75
	.  error

	sql_id  goto 74

state 44
	constraint_opt:  UNIQUE.    (200)

	.  reduce 200 (src line 1025)


state 45
	alter_statement:  ALTER ignore_opt.TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt.TABLE ID RENAME to_opt ID 

	TABLE  shift 76
	.  error


state 46
	alter_statement:  ALTER VIEW.sql_id force_eof 

	ID  shift 75
	.  error

	sql_id  goto 77

state 47
	ignore_opt:  IGNORE.    (191)

	.  reduce 191 (src line 1003)


state 48
	rename_statement:  RENAME TABLE.ID TO ID 

	ID  shift 78
	.  error


state 49
	drop_statement:  DROP TABLE.exists_opt ID 
	exists_opt: .    (186)

	IF  shift 80
	.  reduce 186 (src line 991)

	exists_opt  goto 79

state 50
	drop_statement:  DROP INDEX.sql_id ON ID 

	ID  shift 75
	.  error

	sql_id  goto 81

state 51
	drop_statement:  DROP VIEW.exists_opt sql_id force_eof 
	exists_opt: .    (186)

	IF  shift 80
	.  reduce 186 (src line 991)

	exists_opt  goto 82

state 52
	analyze_statement:  ANALYZE TABLE.ID 

	ID  shift 83
	.  error


state 53
	other_statement:  SHOW force_eof.    (33)

	.  reduce 33 (src line 279)


state 54
	other_statement:  DESCRIBE force_eof.    (34)

	.  reduce 34 (src line 284)


state 55
	other_statement:  EXPLAIN force_eof.    (35)

	.  reduce 35 (src line 288)


state 56
	select_statement:  select_statement.union_op select_statement 
	select_statement:  select_statement union_op select_statement.    (15)

	.  reduce 15 (src line 177)

	union_op  goto 29

state 57
	union_op:  UNION ALL.    (41)

	.  reduce 41 (src line 317)


state 58
	select_statement:  SELECT comment_opt distinct_opt.select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 

	EXISTS  shift 101
	NULL  shift 106
	VALUES  shift 112
	KEYRANGE  shift 102
	ID  shift 88
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 93
	'~'  shift 110
	NOT  shift 92
	'+'  shift 108
	'-'  shift 109
	'*'  shift 86
	CASE  shift 113
	IF  shift 111
	.  error

	select_expression_list  goto 84
	select_expression  goto 85
	expression  goto 87
	boolean_expression  goto 89
	condition  goto 91
	value  goto 94
	value_expression  goto 90
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 59
	distinct_opt:  DISTINCT.    (46)

	.  reduce 46 (src line 338)


state 60
	comment_opt:  $$36 comment_list.    (37)
	comment_list:  comment_list.COMMENT 

	COMMENT  shift 114
	.  reduce 37 (src line 297)


state 61
	insert_statement:  INSERT comment_opt INTO.dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt INTO.dml_table_expression SET update_list on_dup_opt 

	ID  shift 63
	.  error

	dml_table_expression  goto 115

state 62
	update_statement:  UPDATE comment_opt dml_table_expression.SET update_list where_expression_opt order_by_opt limit_opt 

	SET  shift 116
	.  error


state 63
	dml_table_expression:  ID.    (78)
	dml_table_expression:  ID.'.' ID 

	'.'  shift 117
	.  reduce 78 (src line 483)


state 64
	replace_statement:  REPLACE comment_opt dml_table_expression.SET update_list 

	SET  shift 118
	.  error


state 65
	delete_statement:  DELETE comment_opt FROM.dml_table_expression where_expression_opt order_by_opt limit_opt 

	ID  shift 63
	.  error

	dml_table_expression  goto 119

state 66
	set_statement:  SET comment_opt update_list.    (21)
	update_list:  update_list.',' update_expression 

	','  shift 120
	.  reduce 21 (src line 216)


state 67
	update_list:  update_expression.    (183)

	.  reduce 183 (src line 975)


state 68
	update_expression:  column_name.'=' value_expression 

	'='  shift 121
	.  error


state 69
	column_name:  sql_id.    (147)

	.  reduce 147 (src line 799)


state 70
	column_name:  ID.'.' sql_id 
	sql_id:  ID.    (203)

	'.'  shift 122
	.  reduce 203 (src line 1033)


state 71
	create_statement:  CREATE TABLE not_exists_opt.ID force_eof 

	ID  shift 123
	.  error


state 72
	not_exists_opt:  IF.NOT EXISTS 

	NOT  shift 124
	.  error


state 73
	create_statement:  CREATE constraint_opt INDEX.sql_id using_opt ON ID force_eof 

	ID  shift 75
	.  error

	sql_id  goto 125

state 74
	create_statement:  CREATE VIEW sql_id.force_eof 
	force_eof: .    (204)

	.  reduce 204 (src line 1039)

	force_eof  goto 126

state 75
	sql_id:  ID.    (203)

	.  reduce 203 (src line 1033)


state 76
	alter_statement:  ALTER ignore_opt TABLE.ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE.ID RENAME to_opt ID 

	ID  shift 127
	.  error


state 77
	alter_statement:  ALTER VIEW sql_id.force_eof 
	force_eof: .    (204)

	.  reduce 204 (src line 1039)

	force_eof  goto 128

state 78
	rename_statement:  RENAME TABLE ID.TO ID 

	TO  shift 129
	.  error


state 79
	drop_statement:  DROP TABLE exists_opt.ID 

	ID  shift 130
	.  error


state 80
	exists_opt:  IF.EXISTS 

	EXISTS  shift 131
	.  error


state 81
	drop_statement:  DROP INDEX sql_id.ON ID 

	ON  shift 132
	.  error


state 82
	drop_statement:  DROP VIEW exists_opt.sql_id force_eof 

	ID  shift 75
	.  error

	sql_id  goto 133

state 83
	analyze_statement:  ANALYZE TABLE ID.    (32)

	.  reduce 32 (src line 273)


state 84
	select_statement:  SELECT comment_opt distinct_opt select_expression_list.FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	select_expression_list:  select_expression_list.',' select_expression 

	FROM  shift 134
	','  shift 135
	.  error


state 85
	select_expression_list:  select_expression.    (47)

	.  reduce 47 (src line 343)


state 86
	select_expression:  '*'.    (49)

	.  reduce 49 (src line 353)


state 87
	select_expression:  expression.as_lower_opt 
	as_lower_opt: .    (54)

	AS  shift 138
	ID  shift 75
	.  reduce 54 (src line 377)

	as_lower_opt  goto 136
	sql_id  goto 137

state 88
	select_expression:  ID.'.' '*' 
	column_name:  ID.'.' sql_id 
	sql_id:  ID.    (203)

	'.'  shift 139
	.  reduce 203 (src line 1033)


state 89
	expression:  boolean_expression.    (52)
	boolean_expression:  boolean_expression.AND boolean_expression 
	boolean_expression:  boolean_expression.OR boolean_expression 

	OR  shift 141
	AND  shift 140
	.  reduce 52 (src line 367)


state 90
	expression:  value_expression.    (53)
	condition:  value_expression.compare value_expression 
	condition:  value_expression.IN col_tuple 
	condition:  value_expression.NOT IN col_tuple 
	condition:  value_expression.LIKE value_expression 
	condition:  value_expression.NOT LIKE value_expression 
	condition:  value_expression.BETWEEN value_expression AND value_expression 
	condition:  value_expression.NOT BETWEEN value_expression AND value_expression 
	condition:  value_expression.IS NULL 
	condition:  value_expression.IS NOT NULL 
	value_expression:  value_expression.'&' value_expression 
	value_expression:  value_expression.'|' value_expression 
	value_expression:  value_expression.'^' value_expression 
	value_expression:  value_expression.'+' value_expression 
	value_expression:  value_expression.'-' value_expression 
	value_expression:  value_expression.'*' value_expression 
	value_expression:  value_expression.'/' value_expression 
	value_expression:  value_expression.'%' value_expression 

	IN  shift 143
	IS  shift 147
	LIKE  shift 145
	BETWEEN  shift 146
	LE  shift 159
	GE  shift 160
	NE  shift 161
	NULL_SAFE_EQUAL  shift 162
	'='  shift 156
	'<'  shift 157
	'>'  shift 158
	NOT  shift 144
	'&'  shift 148
	'|'  shift 149
	'^'  shift 150
	'+'  shift 151
	'-'  shift 152
	'*'  shift 153
	'/'  shift 154
	'%'  shift 155
	.  reduce 53 (src line 372)

	compare  goto 142

state 91
	boolean_expression:  condition.    (88)

	.  reduce 88 (src line 529)


state 92
	boolean_expression:  NOT.boolean_expression 

	EXISTS  shift 101
	NULL  shift 106
	VALUES  shift 112
	KEYRANGE  shift 102
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 93
	'~'  shift 110
	NOT  shift 92
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	boolean_expression  goto 163
	condition  goto 91
	value  goto 94
	value_expression  goto 164
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 93
	boolean_expression:  '('.boolean_expression ')' 
	subquery:  '('.select_statement ')' 
	row_tuple:  '('.value_expression_list ')' 

	SELECT  shift 15
	EXISTS  shift 101
	NULL  shift 106
	VALUES  shift 112
	KEYRANGE  shift 102
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 93
	'~'  shift 110
	NOT  shift 92
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	select_statement  goto 166
	boolean_expression  goto 165
	condition  goto 91
	value  goto 94
	value_expression  goto 168
	value_expression_list  goto 167
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 94
	value_expression:  value.    (117)

	.  reduce 117 (src line 654)


state 95
	value_expression:  column_name.    (118)

	.  reduce 118 (src line 659)


state 96
	value_expression:  row_tuple.    (119)

	.  reduce 119 (src line 663)


state 97
	value_expression:  unary_operator.value_expression 

	NULL  shift 106
	VALUES  shift 112
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 170
	'~'  shift 110
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	value  goto 94
	value_expression  goto 169
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 98
	value_expression:  sql_id.'(' ')' 
	value_expression:  sql_id.'(' select_expression_list ')' 
	value_expression:  sql_id.'(' DISTINCT select_expression_list ')' 
	column_name:  sql_id.    (147)

	'('  shift 171
	.  reduce 147 (src line 799)


state 99
	value_expression:  keyword_as_func.'(' select_expression_list ')' 

	'('  shift 172
	.  error


state 100
	value_expression:  case_expression.    (133)

	.  reduce 133 (src line 730)


state 101
	condition:  EXISTS.subquery 

	'('  shift 174
	.  error

	subquery  goto 173

state 102
	condition:  KEYRANGE.'(' value ',' value ')' 

	'('  shift 175
	.  error


state 103
	value:  STRING.    (149)

	.  reduce 149 (src line 809)


state 104
	value:  NUMBER.    (150)

	.  reduce 150 (src line 814)


state 105
	value:  VALUE_ARG.    (151)

	.  reduce 151 (src line 818)


state 106
	value:  NULL.    (152)

	.  reduce 152 (src line 822)


state 107
	row_tuple:  subquery.    (182)

	.  reduce 182 (src line 970)


state 108
	unary_operator:  '+'.    (136)

	.  reduce 136 (src line 745)


state 109
	unary_operator:  '-'.    (137)

	.  reduce 137 (src line 750)


state 110
	unary_operator:  '~'.    (138)

	.  reduce 138 (src line 754)


state 111
	keyword_as_func:  IF.    (134)

	.  reduce 134 (src line 735)


state 112
	keyword_as_func:  VALUES.    (135)

	.  reduce 135 (src line 740)


state 113
	case_expression:  CASE.value_expression_opt when_expression_list else_expression_opt END 
	value_expression_opt: .    (140)

	NULL  shift 106
	VALUES  shift 112
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 170
	'~'  shift 110
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  reduce 140 (src line 765)

	value  goto 94
	value_expression  goto 177
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	value_expression_opt  goto 176
	sql_id  goto 98

state 114
	comment_list:  comment_list COMMENT.    (39)

	.  reduce 39 (src line 307)


state 115
	insert_statement:  INSERT comment_opt INTO dml_table_expression.column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt INTO dml_table_expression.SET update_list on_dup_opt 
	column_list_opt: .    (171)

	SET  shift 179
	'('  shift 180
	.  reduce 171 (src line 917)

	column_list_opt  goto 178

state 116
	update_statement:  UPDATE comment_opt dml_table_expression SET.update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 70
	.  error

	column_name  goto 68
	update_list  goto 181
	update_expression  goto 67
	sql_id  goto 69

state 117
	dml_table_expression:  ID '.'.ID 

	ID  shift 182
	.  error


state 118
	replace_statement:  REPLACE comment_opt dml_table_expression SET.update_list 

	ID  shift 70
	.  error

	column_name  goto 68
	update_list  goto 183
	update_expression  goto 67
	sql_id  goto 69

state 119
	delete_statement:  DELETE comment_opt FROM dml_table_expression.where_expression_opt order_by_opt limit_opt 
	where_expression_opt: .    (86)

	WHERE  shift 185
	.  reduce 86 (src line 520)

	where_expression_opt  goto 184

state 120
	update_list:  update_list ','.update_expression 

	ID  shift 70
	.  error

	column_name  goto 68
	update_expression  goto 186
	sql_id  goto 69

state 121
	update_expression:  column_name '='.value_expression 

	NULL  shift 106
	VALUES  shift 112
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 170
	'~'  shift 110
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	value  goto 94
	value_expression  goto 187
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 122
	column_name:  ID '.'.sql_id 

	ID  shift 75
	.  error

	sql_id  goto 188

state 123
	create_statement:  CREATE TABLE not_exists_opt ID.force_eof 
	force_eof: .    (204)

	.  reduce 204 (src line 1039)

	force_eof  goto 189

state 124
	not_exists_opt:  IF NOT.EXISTS 

	EXISTS  shift 190
	.  error


state 125
	create_statement:  CREATE constraint_opt INDEX sql_id.using_opt ON ID force_eof 
	using_opt: .    (201)

	USING  shift 192
	.  reduce 201 (src line 1028)

	using_opt  goto 191

state 126
	create_statement:  CREATE VIEW sql_id force_eof.    (24)

	.  reduce 24 (src line 232)


state 127
	alter_statement:  ALTER ignore_opt TABLE ID.non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE ID.RENAME to_opt ID 

	ORDER  shift 198
	DEFAULT  shift 196
	ID  shift 199
	ALTER  shift 195
	DROP  shift 197
	RENAME  shift 194
	.  error

	non_rename_operation  goto 193

state 128
	alter_statement:  ALTER VIEW sql_id force_eof.    (27)

	.  reduce 27 (src line 247)


state 129
	rename_statement:  RENAME TABLE ID TO.ID 

	ID  shift 200
	.  error


state 130
	drop_statement:  DROP TABLE exists_opt ID.    (29)

	.  reduce 29 (src line 258)


state 131
	exists_opt:  IF EXISTS.    (187)

	.  reduce 187 (src line 993)


state 132
	drop_statement:  DROP INDEX sql_id ON.ID 

	ID  shift 201
	.  error


state 133
	drop_statement:  DROP VIEW exists_opt sql_id.force_eof 
	force_eof: .    (204)

	.  reduce 204 (src line 1039)

	force_eof  goto 202

state 134
	select_statement:  SELECT comment_opt distinct_opt select_expression_list FROM.table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 

	ID  shift 207
	'('  shift 206
	.  error

	table_expression_list  goto 203
	table_expression  goto 204
	simple_table_expression  goto 205
	subquery  goto 208

state 135
	select_expression_list:  select_expression_list ','.select_expression 

	EXISTS  shift 101
	NULL  shift 106
	VALUES  shift 112
	KEYRANGE  shift 102
	ID  shift 88
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 93
	'~'  shift 110
	NOT  shift 92
	'+'  shift 108
	'-'  shift 109
	'*'  shift 86
	CASE  shift 113
	IF  shift 111
	.  error

	select_expression  goto 209
	expression  goto 87
	boolean_expression  goto 89
	condition  goto 91
	value  goto 94
	value_expression  goto 90
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 136
	select_expression:  expression as_lower_opt.    (50)

	.  reduce 50 (src line 358)


state 137
	as_lower_opt:  sql_id.    (55)

	.  reduce 55 (src line 381)


state 138
	as_lower_opt:  AS.sql_id 

	ID  shift 75
	.  error

	sql_id  goto 210

state 139
	select_expression:  ID '.'.'*' 
	column_name:  ID '.'.sql_id 

	ID  shift 75
	'*'  shift 211
	.  error

	sql_id  goto 188

state 140
	boolean_expression:  boolean_expression AND.boolean_expression 

	EXISTS  shift 101
	NULL  shift 106
	VALUES  shift 112
	KEYRANGE  shift 102
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 93
	'~'  shift 110
	NOT  shift 92
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	boolean_expression  goto 212
	condition  goto 91
	value  goto 94
	value_expression  goto 164
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 141
	boolean_expression:  boolean_expression OR.boolean_expression 

	EXISTS  shift 101
	NULL  shift 106
	VALUES  shift 112
	KEYRANGE  shift 102
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 93
	'~'  shift 110
	NOT  shift 92
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	boolean_expression  goto 213
	condition  goto 91
	value  goto 94
	value_expression  goto 164
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 142
	condition:  value_expression compare.value_expression 

	NULL  shift 106
	VALUES  shift 112
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 170
	'~'  shift 110
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	value  goto 94
	value_expression  goto 214
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 143
	condition:  value_expression IN.col_tuple 

	LIST_ARG  shift 218
	'('  shift 216
	.  error

	col_tuple  goto 215
	subquery  goto 217

state 144
	condition:  value_expression NOT.IN col_tuple 
	condition:  value_expression NOT.LIKE value_expression 
	condition:  value_expression NOT.BETWEEN value_expression AND value_expression 

	IN  shift 219
	LIKE  shift 220
	BETWEEN  shift 221
	.  error


state 145
	condition:  value_expression LIKE.value_expression 

	NULL  shift 106
	VALUES  shift 112
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 170
	'~'  shift 110
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	value  goto 94
	value_expression  goto 222
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 146
	condition:  value_expression BETWEEN.value_expression AND value_expression 

	NULL  shift 106
	VALUES  shift 112
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 170
	'~'  shift 110
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	value  goto 94
	value_expression  goto 223
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 147
	condition:  value_expression IS.NULL 
	condition:  value_expression IS.NOT NULL 

	NULL  shift 224
	NOT  shift 225
	.  error


state 148
	value_expression:  value_expression '&'.value_expression 

	NULL  shift 106
	VALUES  shift 112
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 170
	'~'  shift 110
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	value  goto 94
	value_expression  goto 226
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 149
	value_expression:  value_expression '|'.value_expression 

	NULL  shift 106
	VALUES  shift 112
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 170
	'~'  shift 110
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	value  goto 94
	value_expression  goto 227
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 150
	value_expression:  value_expression '^'.value_expression 

	NULL  shift 106
	VALUES  shift 112
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 170
	'~'  shift 110
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	value  goto 94
	value_expression  goto 228
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 151
	value_expression:  value_expression '+'.value_expression 

	NULL  shift 106
	VALUES  shift 112
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 170
	'~'  shift 110
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	value  goto 94
	value_expression  goto 229
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 152
	value_expression:  value_expression '-'.value_expression 

	NULL  shift 106
	VALUES  shift 112
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 170
	'~'  shift 110
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	value  goto 94
	value_expression  goto 230
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 153
	value_expression:  value_expression '*'.value_expression 

	NULL  shift 106
	VALUES  shift 112
	ID  shift 70
	STRING  shift 103
	NUMBER  shift 104
	VALUE_ARG  shift 105
	'('  shift 170
	'~'  shift 110
	'+'  shift 108
	'-'  shift 109
	CASE  shift 113
	IF  shift 111
	.  error

	value  goto 94
	value_expression  goto 231
	row_tuple  goto 96
	keyword_as_func  goto 99
	subquery  goto 107
	unary_operator  goto 97
	column_name  goto 95
	case_expression  goto 100
	sql_id  goto 98

state 154
	value_expression:  value_expression '/'.value_expression 
